# pkmn-factors

./: .ci_ping  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
alembic/: env.py
alembic/versions/: 14adebb5f39a_merge_heads_7b9e2c8a5c2e_d4d8a5a5044e.py  336346fb1797_init_trades_table_timescale_extension.py  3f2c1f1f98d2_add_metrics_table.py  7b9e2c8a5c2e_defaults_and_daily_prices.py  d4d8a5a5044e_add_perf_indexes.py  df1230780a85_cards_signals_trades_daily_mv.py  fdcbe190a7e3_add_features_jsonb_to_signals.py
src/pkmn_factors/: config.py  universe.py
src/pkmn_factors/api/: __init__.py  demo.py  health.py  main.py  schemas.py  universe.py
src/pkmn_factors/api/static/: index.html
src/pkmn_factors/core/: scoring_rt.py
src/pkmn_factors/db/: base.py  models.py
src/pkmn_factors/eval/: backtest.py
src/pkmn_factors/factors/: features.py
src/pkmn_factors/ingest/: csv_to_trades.py
src/pkmn_factors/models/: bhs_baseline.py  bhs_baseline_v2.py
src/pkmn_factors/ops/: demo_pipeline.py  maintenance.py  nightly.py  run_nightly.py  run_universe.py
tests/: test_smoke.py  test_universe_api.py
